--- a/app/views/organizations/_summary.html.haml
+++ b/app/views/organizations/_summary.html.haml
@@ -1,7 +1,8 @@
 .thumbnail.a-hide-overflow.a-organization-thumbnail
   .caption
     %h4
-      = organization.name
+      %a{:href => organization_path(organization.id)}
+        = organization.name
     %p
       %h4
         - organization.tags.each do |tag|
