Membership and ability to join groups.

--- a/app/views/organizations/_summary.html.haml
+++ b/app/views/organizations/_summary.html.haml
@@ -1,7 +1,7 @@
 .thumbnail.a-hide-overflow.a-organization-thumbnail
   .caption
     %h4
-      %a{:href => organization_path(organization.id)}
+      %a{:href => organization_path(organization)}
         = organization.name
     %p
       %h4
