--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -11,4 +11,10 @@
   %body
     = render partial: "shared/header"
     .container-fluid
+      - if flash[:notice]
+        .row
+          .col-md-offset-3.col-md-6
+            .center-block
+              .alert.alert-info
+                = flash[:notice]
       = yield
