--- a/app/views/organizations/show.html.haml
+++ b/app/views/organizations/show.html.haml
@@ -13,17 +13,18 @@
       Groups
     %ul.list-group
       - @organization.groups.each do |group|
-        %li.list-group-item{:class => ("list-group-item-info" if group.is_member?(current_user))}
-          - unless group.is_member?(current_user)
-            %a.btn.btn-primary.pull-right{:href => group_join_path(group)}
-              %i.fa.fa-plus-circle
-              Join
-          = group.name
-          %br
-          %small
-            = "#{group.memberships.count} members"
-            - if group.is_member?(current_user)
-              including you
-    - unless @organization.is_member?(current_user)
+        - if group.visible
+          %li.list-group-item{:class => ("list-group-item-info" if group.member?(current_user))}
+            - unless group.member?(current_user)
+              %a.btn.btn-primary.pull-right{:href => group_join_path(group)}
+                %i.fa.fa-plus-circle
+                Join
+            = group.name
+            %br
+            %small
+              = "#{group.memberships.count} members"
+              - if group.member?(current_user)
+                including you
+    - unless @organization.member?(current_user)
       %a.btn.btn-primary.btn-block{:href => organization_join_path(@organization)}
         Join Organization
