--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -15,6 +15,8 @@
         .row
           .col-md-offset-3.col-md-6
             .center-block
-              .alert.alert-info
+              .alert.alert-info.alert-dismissable
+                %button.close{:type => "button", "aria-hidden" => "true", :data => {dismiss: "alert"} }
+                  &times;
                 = flash[:notice]
       = yield
