--- a/app/views/organizations/manage.html.haml
+++ b/app/views/organizations/manage.html.haml
@@ -1,8 +1,8 @@
 .row
-  .col-md-offset-2.col-md-8
+  .col-md-offset-1.col-md-10
     %h2
-      = @organization.name
-
+      %a{:href => organization_path(@organization)}
+        = @organization.name
     .btn-group
       %button.btn.btn-default{:type => "button", :disabled => "disabled"}
         = "#{@group.name} - #{@group.users.count} members"
