--- a/app/views/shared/_header.html.haml
+++ b/app/views/shared/_header.html.haml
@@ -15,8 +15,8 @@
             %form.navbar-form{:role => "logout", :action => logout_path(), :method => :post}
               %input{:name => "_method", :type => "hidden", :value => "delete"}
               %input{:name => "authenticity_token", :type => "hidden", :value => form_authenticity_token}
-              %button.btn.btn-default{:type => "submit"}
-                Logout
+              %button.btn.btn-info{:type => "submit", :title => "Logout", :data => {toggle: "tooltip", placement: "bottom"} }
+                %i.fa.fa-lg.fa-power-off
         - else
           %li
             %a{:href => new_user_path()}
