--- a/app/views/organizations/show.html.haml
+++ b/app/views/organizations/show.html.haml
@@ -24,18 +24,14 @@
   .col-md-3
     %h3
       Groups
-    %ul.list-group
+    .list-group
       - @organization.groups.each do |group|
         - if group.visible
-          %li.list-group-item{:class => ("list-group-item-info" if @group == group)}
+          %a.list-group-item{:href => organization_path(@organization, group: group), :class => ("active" if @group == group)}
+            = group.name
             - if @organization.member?(current_user) && !group.member?(current_user) && !group.private
               .pull-right
                 = render partial: "shared/button_to", locals: {target: group_join_path(group), value: "", icon: "fa fa-sign-in fa-lg", block: false, title: "Join"}
-            - if @group == group
-              = group.name
-            - else
-              %a{:href => organization_path(@organization, group: group)}
-                = group.name
             %br
             %small
               - if group.private
