--- a/app/views/organizations/show.html.haml
+++ b/app/views/organizations/show.html.haml
@@ -13,7 +13,7 @@
           - if @organization.admin?(current_user)
             %a.btn.btn-warning{:href => organization_manage_path(@organization), :title => "Manage Organization", :data => {toggle: "tooltip", container: 'body'} }
               %i.fa.fa-gear.fa-lg
-          %a.btn.btn-info{:href => root_path, :title => "Start Conversation", :data => {toggle: "tooltip", container: 'body'} }
+          %a.btn.btn-info{:href => new_conversation_path(organization: @organization.id), :title => "Start Conversation", :data => {toggle: "tooltip", container: 'body'} }
             %i.fa.fa-pencil.fa-lg
         - unless @organization.member?(current_user)
           .pull-right
