Org page UI fixes.

--- a/app/assets/stylesheets/organizations.css.scss
+++ b/app/assets/stylesheets/organizations.css.scss
@@ -2,8 +2,8 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-.a-organization-tag {
-  margin: 0 2px;
+.label {
+  margin: 0 4px;
 }
 
 .a-organization-thumbnail {
