--- a/app/views/organizations/_summary.html.haml
+++ b/app/views/organizations/_summary.html.haml
@@ -6,7 +6,7 @@
     %p
       %h4
         - organization.tags.each do |tag|
-          %span.label.label-info.a-organization-tag
+          %span.label.label-info
             = tag.name
     %p
       %a{:href => organization.website}
