Inbox notifications in the header.

--- a/app/views/shared/_header.html.haml
+++ b/app/views/shared/_header.html.haml
@@ -4,22 +4,44 @@
       %a.navbar-brand{:href => root_path()}
         Aperio
     .collapse.navbar-collapse
-      %ul.nav.navbar-nav.navbar-right
-        - if current_user
+      - if current_user
+        %ul.nav.navbar-nav.navbar-right
           %li
             %p.navbar-text
               %a.navbar-link{:href => user_path(current_user, tab: "timeline")}
                 #{current_user.email}
               %a.navbar-link{:href => user_path(current_user, tab: "notifications")}
-                %span.badge
-                  #{current_user.notifications.count}
+                = render partial: "shared/badge", locals: {count: current_user.notifications.count}
+          %li.dropdown
+            %a.dropdown-toggle{:type => "button", :data => {toggle: "dropdown"}}
+              - if @organization
+                #{@organization.name}
+                = render partial: "shared/badge", locals: {count: current_user.conversation_notifications(@organization).count}
+              - else
+                Inbox
+                = render partial: "shared/badge", locals: {count: current_user.conversation_notifications.count}
+              %span.caret
+            %ul.dropdown-menu{:role => "menu"}
+              - if @organization
+                %li
+                  %a{:href => new_conversation_path(organization: @organization.id)}
+                    Start Conversation
+                %li.divider
+                %li.dropdown-header
+                  Inbox
+              - current_user.conversation_notification_count_by_org.each do |organization, count|
+                %li
+                  %a{:href => organization_path(organization)}
+                    = render partial: "shared/badge", locals: {count: count}
+                    #{organization.name}
           %li
             %form.navbar-form{:role => "logout", :action => logout_path(), :method => :post}
               %input{:name => "_method", :type => "hidden", :value => "delete"}
               %input{:name => "authenticity_token", :type => "hidden", :value => form_authenticity_token}
               %button.btn.btn-info{:type => "submit", :title => "Logout", :data => {toggle: "tooltip", placement: "bottom"} }
                 %i.fa.fa-lg.fa-power-off
-        - else
+      - else
+        %ul.nav.navbar-nav.navbar-right
           %li
             %a{:href => new_user_path()}
               Sign In
