Post message bug fixes. Relocate organizations page.

--- a/app/views/global/home.html.haml
+++ b/app/views/global/home.html.haml
@@ -1,4 +1,2 @@
-.row
-  - @organizations.each do |organization|
-    .col-md-3
-      = render partial: "organizations/summary", locals: { organization: organization }
+%a{:href => organizations_path()}
+  ORGS
