Create organization. Somewhat beautiful homepage.

--- a/app/views/global/home.html.haml
+++ b/app/views/global/home.html.haml
@@ -1,2 +1,24 @@
-%a{:href => organizations_path()}
-  ORGS
+.row
+  .col-md-offset-2.col-md-8
+    .jumbotron
+      %h1
+        aperio:
+        %small
+          (verb - noun - platform)
+      %p.indent-left
+        %small
+          (verb)
+        to open or disclose.
+      %p.indent-left
+        %small
+          (noun)
+        visible, transparent
+      %p.indent-left
+        %small
+          (platform)
+        a new way for engaging and collaborating with individuals that believe in a common cause
+      %p.indent-left
+        %a.btn.btn-primary.btn-lg{:href => organizations_path()}
+          Discover the organizations on aperio
+        %a.btn.btn-primary.btn-lg{:href => new_organization_path()}
+          Put your Non Profit on aperio
