--- a/app/views/global/home.html.haml
+++ b/app/views/global/home.html.haml
@@ -4,19 +4,13 @@
       %h1
         aperio:
         %small
-          (verb - noun - platform)
+          (v)to open or disclose; (n)visible, transparent
       %p.indent-left
-        %small
-          (verb)
-        to open or disclose.
+        Engage meaningfully with your volunteers
       %p.indent-left
-        %small
-          (noun)
-        visible, transparent
+        Increase productivity and reach of your organization
       %p.indent-left
-        %small
-          (platform)
-        a new way for engaging and collaborating with individuals that believe in a common cause
+        Find other individuals or organizations that are doing something about the causes that you believe in
       %p.indent-left
         %a.btn.btn-primary.btn-lg{:href => organizations_path()}
           Discover the organizations on aperio
