--- a/app/views/shared/_header.html.haml
+++ b/app/views/shared/_header.html.haml
@@ -2,7 +2,7 @@
   .container-fluid
     .navbar-header
       %a.navbar-brand{:href => root_path()}
-        Aperio
+        aperio
     .collapse.navbar-collapse
       - if current_user
         %ul.nav.navbar-nav.navbar-right
