Mobile organizations page.

--- a/app/assets/stylesheets/organizations.css.scss
+++ b/app/assets/stylesheets/organizations.css.scss
@@ -6,7 +6,7 @@
   margin: 0 4px;
 }
 
-.a-organization-thumbnail {
-  height: 250px;
-  overflow: scroll;
+.ap-org-summary:hover {
+  background-color: #eee;
+  cursor: pointer;
 }
